# KonradGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
data/: savefile.json
libs/SFML/include/SFML/: Graphics.hpp
libs/SFML/include/SFML/Graphics/: RoundedRectangleShape.hpp  Shape.hpp
libs/SFML/src/SFML/Graphics/: CMakeLists.txt  Shape.cpp
res/elevator/: elevator.json
res/entrance/: level.json
res/level_0/: level.json  level_backup_old.json
res/level_1/: level.json  level_backup_buttons.json  level_backup_camera.json  level_backup_darkness.json  level_backup_fans.json  level_backup_respawn.json
res/level_2/: level-backup-checkpoints.json  level-backup-subarea0.json  level-backup-subareas.json  level.json
res/level_3/: level.json
src/: Animation.cpp  Animation.hpp  BaseState.hpp  Camera.cpp  Camera.hpp  Collider.cpp  Collider.hpp  Collision.cpp  Collision.hpp  Controller.cpp  Controller.hpp  DarkMode.cpp  DarkMode.hpp  Elevator.cpp  Elevator.hpp  Engine.cpp  Engine.hpp  Entrance.cpp  Entrance.hpp  Input.cpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  Level.cpp  Level.hpp  MainLoop.cpp  MainLoop.hpp  MainMenu.cpp  MainMenu.hpp  MainView.cpp  MainView.hpp  Mouse.cpp  Mouse.hpp  Object.cpp  Object.hpp  Outro.cpp  Outro.hpp  Particle.cpp  Particle.hpp  PauseMenu.cpp  (+17 more)
src/Enemies/: Gondrae.cpp  Gondrae.hpp  Gonraed.cpp  Gonraed.hpp
src/Objects/: Button.cpp  Button.hpp  CameraView.hpp  Chandelier.cpp  Chandelier.hpp  Darkness.cpp  Darkness.hpp  Destroyable.cpp  Destroyable.hpp  DestroyableWall.cpp  DestroyableWall.hpp  DisappearingPlatform.cpp  DisappearingPlatform.hpp  Door.cpp  Door.hpp  ElevatorDoor.cpp  ElevatorDoor.hpp  Fan.cpp  Fan.hpp  GlassBox.cpp  GlassBox.hpp  Gravitational.cpp  Gravitational.hpp  Gun.cpp  Gun.hpp  Key.hpp  Lever.cpp  Lever.hpp  Lightning.cpp  Lightning.hpp  LockedWarpDoor.cpp  LockedWarpDoor.hpp  MovingPlatform.cpp  MovingPlatform.hpp  MovingPlatformHorizontal.cpp  MovingPlatformHorizontal.hpp  MovingPlatformVertical.cpp  MovingPlatformVertical.hpp  OnCollisionLoadLevel1.cpp  OnCollisionLoadLevel1.hpp  (+26 more)
